--- a/02-ggplot.Rmd
+++ b/02-ggplot.Rmd
@@ -1,4 +1,4 @@
-% An introduction to ggplot2 for rapid data and model visualization
+# An introduction to ggplot2 for rapid data and model visualization
 
 # Goals
 
@@ -145,7 +145,7 @@ ggplot(morph, aes(wingl, beakh)) +
   geom_point(aes(colour = sex))
 ```
 
-## Your turn
+## Challenge 1
 
 Explore the `morph` dataset yourself by applying some aesthetics. You can see all the available aesthetics for a given geom by looking at the documentation, e.g. `?geom_point`, or at <http://docs.ggplot2.org/current/>.
 
@@ -184,7 +184,7 @@ In ggplot2 parlance, small multiples are referred to as "facets". There are two 
 
 To specify the data frame columns that are mapped to the rows and columns of facets, separate them with a tilde. For example: `+ facet_grid(row_name~column_name)`. Usually you'll only give a row or column to `facet_wrap()`, but try and see what happens if you give it both. See the help `?facet_wrap`.
 
-## Your turn
+## Challenge 2
 
 Try a scatterplot of beak height against wing length with a different panel for each taxon. I've started it for your. Use `facet_wrap()` (hint: the synatax is `+ facet_wrap(~column_name)`:
 
@@ -224,7 +224,7 @@ morph_quant <- morph %>%
   mutate(taxon = reorder(taxon, m, function(x) x))
 ```
 
-## Your turn
+## Challenge 3
 
 Now we'll make the plot. Start by adding the geom `geom_pointrange` to the following code:
 
