--- a/11-binomial-glmm.Rmd
+++ b/11-binomial-glmm.Rmd
@@ -1,6 +1,6 @@
 # Binomial GLMMs
 
-# Goals:
+# Goals
 
 - Gain familiarity with building, checking, and plotting a binomial GLMM
 - Learn about binned residual plots for checking binomial models
