--- a/08-variance-structures.Rmd
+++ b/08-variance-structures.Rmd
@@ -112,7 +112,7 @@ The most common ones I've seen used are `nlme::varIdent`, `nlme::varExp`, and `n
 
 Let's take a look at the shape of the exponential and power variance functions in nlme:
 
-```{r}
+```{r, eval=FALSE}
 get_varPower <- function(v, t1) abs(v)^(2 * t1)
 get_varConstPower <- function(v, t1, t2) (t1 + abs(v)^t2)^2
 get_varExp <- function(v, t1) exp(2 * t1 * v)
