--- a/99-comparisons.Rmd
+++ b/99-comparisons.Rmd
@@ -44,9 +44,13 @@ se_comp <- sqrt(se[["drying:speciesb"]]^2 - se[["drying"]]^2)
 fe_comp + c(-1.96, 1.96) * se_comp
 
 comparison_effect <- function(model, base_par, comparison_par) {
-  fe <- fixef(model)
-  se <- arm::se.fixef(model)
-  
+  if (class(model) == "glmmTMB") {
+    fe <- fixef(model)$cond
+    se <- coef(summary(m4))$cond[,"Std. Error"]
+  } else {
+    se <- arm::se.fixef(model)
+    fe <- fixef(model)
+  }
   if (base_par != comparison_par) {
     fe_comp <- fe[[comparison_par]] + fe[[base_par]]
     se_comp <- sqrt(se[[comparison_par]]^2 - se[[base_par]]^2)
